# yatube

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
database/: Dockerfile
django/: Dockerfile
django/about/: urls.py
django/core/: models.py  pagination.py  views.py
django/core/context_processors/: year.py
django/core/management/commands/: clear_db.py  export_db.py  import_db.py  superuser.py
django/core/templatetags/: user_filters.py
django/data/export/: groups.csv  posts.csv  users.csv
django/data/import/: follow.csv  posts.csv  users.csv
django/data/leo/: comments.csv  groups.csv  posts.csv
django/posts/: admin.py  forms.py  models.py  urls.py  views.py
django/posts/migrations/: 0001_initial.py  0002_initial.py
django/templates/: base.html  card.html
django/templates/about/: author.html  tech.html
django/templates/core/: 404.html
django/templates/includes/: form_errors.html  form_fields.html  header.html  page.html
django/templates/posts/: create_post.html  follow.html  group_list.html  index.html  post_detail.html
django/templates/posts/includes/: switcher.html
django/templates/users/: profile.html  signin.html  signout.html  signup.html
django/users/: admin.py  forms.py  models.py  urls.py  views.py
django/users/migrations/: 0001_initial.py
django/yatube/: settings.py  urls.py
gateway/: nginx.conf
